# custom-keyboard

./: .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt  Makefile  README.md
firmware/apps/core/src/: main.c
firmware/apps/fs/inc/: fs_app.h
firmware/apps/fs/src/: fs_app.c
firmware/apps/gestures/inc/: app_gestures.h
firmware/apps/hid/inc/: app_usbd.h
firmware/apps/hid/src/: app_usbd.c  app_usbd_hid.c
firmware/apps/keyboard/inc/: app_keyboard.h
firmware/bsp/STMicroelectronics/rtos/: bsp_fs_dev_sd_spi.c  bsp_usbd_stm32f4.h  usbd_drv_stm32f_fs.c  usbd_drv_stm32f_fs.h
firmware/bsp/Template/: bsp_cpu.c  bsp_switches.c  bsp_switches.h  bsp_usbd_template.c  usbd_drv_template.c
firmware/bsp/Template/rtos/: usbd_drv_template.c
firmware/bsp/inc/: bsp.h  usbd_drv_template.h
firmware/cfg/inc/: app_cfg.h  bsp_cfg.h  clk_cfg.h  common.h  common_types.h  cpu_cfg.h  fs_cfg.h  keyboard_cfg.h  lib_cfg.h  os_cfg.h  os_cfg_app.h  shell_cfg.h  usbd_cfg.h  usbd_dev_cfg.h
firmware/cfg/src/: keyboard_cfg.c  os_app_hooks.c  usbd_dev_cfg.c
firmware/drivers/gesture/inc/: gesture.h
firmware/drivers/switches/inc/: switches.h
firmware/drivers/switches/src/: switches.c
firmware/drivers/usb/hid/: usbd_hid.h  usbd_hid_os.h
firmware/rtos/: README.md
firmware/rtos/cfg/inc/: os_app_hooks.h
firmware/rtos/uC-CPU/: cpu_cache.h  cpu_core.c  cpu_core.h  cpu_def.h
firmware/rtos/uC-Common/: common.h  common_err.h
firmware/rtos/uC-LIB/: lib_ascii.c  lib_ascii.h  lib_def.h  lib_math.c  lib_math.h  lib_mem.c  lib_mem.h  lib_str.c  lib_str.h
(+257 files in other folders)
